# agnipariksha

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Makefile  README.md  RUNBOOK.md  SAFETY.md  deploy.ps1  deploy.sh  docker-compose.yml  railway.json
artifacts/: RELEASE_NOTES.md  SHA256SUMS
backend/: .env.example  .gitignore  __main__.py  alembic.ini  assistant.py  auth.py  basic_check.py  bdt_router.py  config.py  database.py  db.py  demo.py  events.py  gct_router.py  labels.py  main.py  mcp_server.py  orchestrator_stub.py  procurement.py  push.py  pytest.ini  reports.py  requirements.txt  run.ps1  run.sh  scheduler.py  scheduler_api.py  scpi_async.py  scpi_driver.py  scpi_router.py  scpi_stub.py  start.ps1  start.sh  tickets.py
docs/: GO_LIVE.md  NOTION_APPEND_BODY.md  PRD.md  ROLLBACK.md  bench-protocol.md  lessons-log.md  qa-harness.md  solarlabx-diff.md  tbe-scoring.md  test-standards.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  playwright.config.ts  start.ps1  start.sh  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
matlab/: README.md  RUN_ME.m  build_psu_plant_model.m  psu_opcua_bridge.m  psu_plant_defaults.m  psu_plant_step.m  reference_trace.csv  run_psu_step_response.m
mcp/: README.md  mcp.json  package-lock.json  package.json  tsconfig.json
scripts/: backup_db.sh  deploy-staging.ps1  deploy-staging.sh  preflight-bench.sh  smoke.ps1  smoke.sh  (+3 more)
(+537 files in other folders)
