[package]
name = "agnipariksha"
version = "1.0.0"
edition = "2021"
description = "Agnipariksha PV reliability test station — Tauri desktop wrapper"
license = "MIT"

[[bin]]
name = "agnipariksha"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
